mydiaries page created and login logout bug fixes

--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,10 @@ h3 {
   color: #777;
 }
 
+.header .logo .myDiariesLink {
+  margin-left: 1.5rem;
+}
+
 .heading {
   font-size: 2rem;
   font-weight: 700;
@@ -108,6 +112,23 @@ h3 {
   text-align: left;
   display: block;
   margin: 0 0 5px 3px;
+}
+
+.viewDiaries .item:not(.comment) {
+  height: 50px;
+}
+
+.viewLabel {
+  border-right: 2px solid black;
+}
+
+.viewInfo {
+  display: flex;
+  width: 100%;
+  margin-left: 1rem;
+}
+.comment .viewInfo {
+  text-align: left;
 }
 
 .btn {
