--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Roboto,
+    Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -113,7 +113,36 @@ h3 {
   display: block;
   margin: 0 0 5px 3px;
 }
+.plusContainer {
+  display: flex;
+}
 
+.plusContainer button {
+  width: 75px;
+  height: 75px;
+  background-color: purple;
+  border-radius: 11%;
+  border-color: transparent;
+  margin-right: 1.5rem;
+}
+
+.plusContainer .plus {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: #fff;
+}
+.myDiaries {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.myDiaries .heading {
+  margin-left: 13%;
+  color: purple;
+}
 .viewDiaries .item:not(.comment) {
   height: 50px;
 }
