new design edits and functional edits and emit events

--- a/src/index.css
+++ b/src/index.css
@@ -176,9 +176,9 @@ h3 {
   justify-content: center;
 }
 
-.btn svg {
+/* .btn svg {
   margin-right: 8px;
-}
+} */
 
 .btn-reverse {
   background: #fff;
