--- a/src/index.css
+++ b/src/index.css
@@ -161,6 +161,10 @@ h3 {
   flex-direction: column;
   color: #fff;
 }
+.plusContainer .plus svg {
+  height: 16px;
+  width: 16px;
+}
 .myDiaries {
   display: flex;
   flex-direction: column;
